src/sections/Character/Character.Styles.module.css
.consoleWrapper {
  display: inline-block;
  white-space: nowrap;
}

.consoleUnderscore {
  display: inline-block;
  position: relative;
  top: -0.1em;
  left: 3px;
  width: 8px;
  height: 30px;
  color: var(--text-color);
  animation: blink 0.8s step-end infinite;
}

.consoleText {
  color: var(--text-color);
  font-family: 'Roboto Mono', monospace;
  font-size: 20px;
}

.hidden {
  opacity: 100;
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  text-align: center;
  height: 100dvh;
  min-height: 500px;
  animation: enter 1s ease-out 1 both;

  .character {
    max-width: 200px;
  }
  .social {
    display: flex;
  }
  span {
    gap: 25px;
    justify-content: center;

    a {
      margin: 0;

      img {
        width: 30px;
      }
    }
  }
  a {
    width: fit-content;
    align-self: center;
    text-decoration: none;
  }

  button {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--btn-color);
    color: var(--btn-text-color);
    border: none;
    border-radius: 20px;
    width: 200px;
    height: 50px;
    font-size: 20px;
    font-weight: bold;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
  }
  button:hover {
    transform: scale(1.05);
  }

  button:active {
    transform: translateY(2px);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
  }
}

.colorModeContainer {
  position: relative;
}

.colorMode {
  position: absolute;
  right: 0;
  width: 25px;
}

.colorMode:hover {
  cursor: pointer;
}

.description {
  max-width: 24ch;
  align-self: center;
}

.info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
}

.arrow {
  font-size: 30px;
  text-align: center;
  transform: rotate(180deg);
  margin-top: -60px;
  color: var(--text-color);
  animation: bounce 1s ease-in-out infinite;
}

@media (width >= 800px) {
  .container {
    flex-direction: row-reverse;
    align-items: center;
    justify-content: space-evenly;

    .character {
      max-width: 450px;
      width: 450px;
    }
  }
}

@media (width >= 1400px) {
  .container {
    .character {
      max-width: 500px;
      width: 500px;
    }
  }
}

@keyframes bounce {
  0% {
    transform: translateY(0) rotate(180deg);
  }
  50% {
    transform: translateY(-10px) rotate(180deg);
  }
  100% {
    transform: translateY(0) rotate(180deg);
  }
}
@keyframes enter {
  from {
    opacity: 0;
    transform: perspective(500px) translate3d(-35px, -40px, -150px)
      rotate3d(1, -1, 0, 35deg);
  }
  to {
    opacity: 1;
    transform: perspective(500px) translate3d(0, 0, 0);
  }
}

